--- a/var_importance.ipynb
+++ b/var_importance.ipynb
@@ -17,13 +17,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import utils\n",
-    "import epftools as epf\n",
     "import warnings\n",
     "import sys\n",
     "import forecasting_vars as fvars\n",
     "# Imports específicos\n",
     "from sklearn.exceptions import ConvergenceWarning\n",
-    "from sklearn import set_config\n",
+    "from sktime.forecasting.compose import make_reduction\n",
     "# Modelos\n",
     "from sklearn.linear_model import LassoCV, RidgeCV\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
@@ -40,7 +39,7 @@
     "FORECASTING_HORIZONS = [1, 2, 3, 6, 12]\n",
     "VAR_IMPORTANCE_DIR = \"var_importance\"\n",
     "# Estimador sendo ajustado\n",
-    "CURRENT_ESTIMATOR = 'lgbm'\n",
+    "CURRENT_ESTIMATOR = 'lasso'\n",
     "if \"forecasting_vars\" not in sys.modules:\n",
     "    TEST_SIZE = 79\n",
     "    WINDOW_LENGTH = 12\n",
@@ -323,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -331,34 +330,35 @@
      "output_type": "stream",
      "text": [
       "h = 1\n",
-      "Rodando lgbm\n",
-      "Rodando random_forest\n",
-      "Rodando lasso\n",
       "Rodando ridge\n",
+      "Rodando lasso\n",
+      "Rodando random_forest\n",
+      "Rodando lgbm\n",
       "h = 2\n",
-      "Rodando lgbm\n",
-      "Rodando random_forest\n",
-      "Rodando lasso\n",
       "Rodando ridge\n",
+      "Rodando lasso\n",
+      "Rodando random_forest\n",
+      "Rodando lgbm\n",
       "h = 3\n",
-      "Rodando lgbm\n",
-      "Rodando random_forest\n",
-      "Rodando lasso\n",
       "Rodando ridge\n",
+      "Rodando lasso\n",
+      "Rodando random_forest\n",
+      "Rodando lgbm\n",
       "h = 6\n",
-      "Rodando lgbm\n",
-      "Rodando random_forest\n",
-      "Rodando lasso\n",
       "Rodando ridge\n",
-      "h = 12\n",
-      "Rodando lgbm\n",
-      "Rodando random_forest\n",
       "Rodando lasso\n",
-      "Rodando ridge\n"
+      "Rodando random_forest\n",
+      "Rodando lgbm\n",
+      "h = 12\n",
+      "Rodando ridge\n",
+      "Rodando lasso\n",
+      "Rodando random_forest\n",
+      "Rodando lgbm\n"
      ]
     }
    ],
    "source": [
+    "# Roda modelos para todos os horizontes\n",
     "for h in FORECASTING_HORIZONS:\n",
     "    # Salva arquivo Excel com métricas selecionadas\n",
     "    with pd.ExcelWriter(f\"{VAR_IMPORTANCE_DIR}/h{h}.xlsx\") as writer:\n",
@@ -367,12 +367,13 @@
     "        preds = {}\n",
     "        # Instancia modelos para cada horizonte\n",
     "        regressors = {\n",
-    "            \"lgbm\": LGBMRegressor(**LGBM_CONFIG),\n",
-    "            \"random_forest\": RandomForestRegressor(**RF_CONFIG),\n",
+    "            \"ridge\": RidgeCV(),\n",
     "            \"lasso\": LassoCV(**LASSO_CONFIG),\n",
-    "            \"ridge\": RidgeCV(**RIDGE_CONFIG),\n",
+    "            \"random_forest\": RandomForestRegressor(**RF_CONFIG),\n",
+    "            \"lgbm\": LGBMRegressor(**LGBM_CONFIG),\n",
     "        }\n",
     "        forecasters = {k: make_reduction(v, window_length=WINDOW_LENGTH) for k, v in regressors.items()}\n",
+    "        # Roda todos os modelos\n",
     "        for name, forecaster in forecasters.items():\n",
     "            print(f\"Rodando {name}\")\n",
     "            with warnings.catch_warnings():\n",
